updated location of link buttons on single page and fixes for spacing of wp block elements

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,4 +1,5 @@
 @use 'mixins';
+@use 'variables';
 
 .submit-button, .secondary-button, .primary-button {
     display: block;
@@ -63,7 +64,7 @@
     gap: 3rem;
     width: 100%;
     max-width: 800px;
-    margin: 4rem auto 0 auto;
+    margin: 4rem auto variables.$min-vh-rem auto;
     flex-wrap: wrap;
 
     @media (min-width: 56.25rem) {
