--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -1,4 +1,6 @@
 @use 'mixins';
+@use 'variables';
+
 .featured-work-container, .other-work-container {
 
     h2 {
@@ -19,7 +21,7 @@
 
 .other-work-container {
     background-color: var(--primary-color);
-    padding: 6rem 0;
+    padding: variables.$min-vh-rem 0;
 
     h2 {
         color: var(--text-on-primary);
@@ -39,7 +41,7 @@
 
 .featured-work-card, .project-card, .other-project-card {
     @include mixins.depth-3;
-    // max-width: 590px;
+
     margin: min(10vh, 1.25rem) 1rem;
     padding: .25rem;
     box-sizing: border-box;
