--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,1 @@
-$min-vh-rem: min(20vh, 10rem);
+$min-vh-rem: min(20vh, 12rem);
